--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,10 +19,10 @@ layout: default
 		position: absolute;
 
 		background: rgba(0, 0, 0, {
-				{
-				page.header-mask
+					{
+					page.header-mask
+				}
 			}
-		}
 
 		);
 	}
@@ -39,14 +39,15 @@ layout: default
 				<div class="post-heading">
 					<div class="tags">
 						{% for tag in page.tags %}
-							<a class="tag" href="{{ site.baseurl }}/tags/#{{ tag }}" title="{{ tag }}">{{ tag }}</a>
+						<a class="tag" href="{{ site.baseurl }}/tags/#{{ tag }}" title="{{ tag }}">{{ tag }}</a>
 						{% endfor %}
 					</div>
 					<h1>{{ page.title }}</h1>
 					{% if page.subtitle %}
-						<h2 class="subheading">{{ page.subtitle }}</h2>
+					<h2 class="subheading">{{ page.subtitle }}</h2>
 					{% endif %}
-					<span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+					<span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif
+						%} on {{ page.date | date: "%B %-d, %Y" }}</span>
 				</div>
 			</div>
 		</div>
@@ -65,21 +66,23 @@ layout: default
 				<hr style="visibility: hidden;">
 				<ul class="pager">
 					{% if page.previous.url %}
-						<li class="previous">
-							<a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">
-								Previous
-								<br>
-								<span>{{page.previous.title}}</span>
-							</a>
-						</li>
+					<li class="previous">
+						<a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"
+							data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">
+							Previous
+							<br>
+							<span>{{page.previous.title}}</span>
+						</a>
+					</li>
 					{% endif %}
 					{% if page.next.url %}
-						<li class="next">
-							<a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">
-								Next<br>
-								<span>{{page.next.title}}</span>
-							</a>
-						</li>
+					<li class="next">
+						<a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip"
+							data-placement="top" title="{{page.next.title}}">
+							Next<br>
+							<span>{{page.next.title}}</span>
+						</a>
+					</li>
 					{% endif %}
 				</ul>
 
@@ -100,8 +103,8 @@ layout: default
 						repo: '{{site.gitalk.repo}}',
 						owner: '{{site.gitalk.owner}}',
 						admin: ['{{site.gitalk.admin}}'],
-						distractionFreeMode: {{ site.gitalk.distractionFreeMode}},
-						id: md5(location.pathname),
+						distractionFreeMode: '{{ site.gitalk.distractionFreeMode }}',
+					id: md5(location.pathname),
 					});
 					gitalk.render('gitalk-container');
 				</script>
@@ -127,30 +130,30 @@ layout: default
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 sidebar-container">
 				<!-- Featured Tags -->
 				{% if site.featured-tags %}
-					<section>
-						<hr class="hidden-sm hidden-xs">
-						<h5><a href="/tags/">FEATURED TAGS</a></h5>
-						<div class="tags">
-							{% for tag in site.tags %}
-								{% if tag[1].size > site.featured-condition-size %}
-									<a href="/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-										{{ tag[0] }}
-									</a>
-								{% endif %}
-							{% endfor %}
-						</div>
-					</section>
+				<section>
+					<hr class="hidden-sm hidden-xs">
+					<h5><a href="/tags/">FEATURED TAGS</a></h5>
+					<div class="tags">
+						{% for tag in site.tags %}
+						{% if tag[1].size > site.featured-condition-size %}
+						<a href="/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+							{{ tag[0] }}
+						</a>
+						{% endif %}
+						{% endfor %}
+					</div>
+				</section>
 				{% endif %}
 
 				<!-- Friends Blog -->
 				{% if site.friends %}
-					<hr>
-					<h5>FRIENDS</h5>
-					<ul class="list-inline">
-						{% for friend in site.friends %}
-							<li><a href="{{friend.href}}">{{friend.title}}</a></li>
-						{% endfor %}
-					</ul>
+				<hr>
+				<h5>FRIENDS</h5>
+				<ul class="list-inline">
+					{% for friend in site.friends %}
+					<li><a href="{{friend.href}}">{{friend.title}}</a></li>
+					{% endfor %}
+				</ul>
 				{% endif %}
 			</div>
 		</div>
@@ -160,23 +163,23 @@ layout: default
 {% if site.anchorjs %}
 <!-- async load function -->
 <script>
-	function async (u, c) {
+	function async(u, c) {
 		var d = document,
 			t = 'script',
 			o = d.createElement(t),
 			s = d.getElementsByTagName(t)[0];
 		o.src = u;
 		if (c) {
-			o.addEventListener('load', function(e) {
+			o.addEventListener('load', function (e) {
 				c(null, e);
 			}, false);
 		}
 		s.parentNode.insertBefore(o, s);
 	}
 </script>
- <!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/ -->
+<!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/ -->
 <script>
-	async ("//cdnjs.cloudflare.com/ajax/libs/anchor-js/1.1.1/anchor.min.js", function() {
+	async("//cdnjs.cloudflare.com/ajax/libs/anchor-js/1.1.1/anchor.min.js", function () {
 		anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
 	})
 </script>
